Winnow 0.5 - Edit picture size numbers to resize